more refactoring and overflow fixes

--- a/client/src/pages/About/About.scss
+++ b/client/src/pages/About/About.scss
@@ -262,12 +262,9 @@
     }
 
     .stat {
+      height: 150px !important;
       .stat-info {
         padding-left: 0.4rem !important;
-        p {
-          font-size: 13px;
-          line-height: 1.2;
-        }
       }
     }
   }
